Add validation for unused FB variables